# genomic-db

./: .env.dev  .gitignore  Dockerfile  ENVIRONMENTS.md  README.md  alembic.ini  db.sh  docker-compose.yml  pyproject.toml
alembic/: README.md  env.py
alembic/versions/: 767a14cd0457_initial_schema.py
backups/: README.md
notebooks/: scratch.ipynb
scripts/: example_usage.py
src/genomic_db/: __init__.py
src/genomic_db/db/: __init__.py  connection.py
src/genomic_db/models/: __init__.py  base.py  chromosome.py  gene.py  genome.py
tests/: test_models.py
